linked all shoes under SHOES main nav to the product page and fixed alignment on the checkout page.

--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,11 @@ section.lv-bags-collection div.card {
   border: none;
 }
 
+.shoes-collection a {
+  text-decoration: none;
+  color: black;
+}
+
 /* ------------------------------------------ PRODUCT PAGE SECTION --------------------------------------- */
 #product-page-cc-icon {
     font-size: 2rem;
